# PicManager

./: .env.example  .gitignore  README.md  init.py  main.py  pyproject.toml  update_nicknames.py
Pic_old/: README.md
Pic_old/legacy_routers/: api_legacy.py
app/: __init__.py  cli.py  config.py  database.py  logger.py  models.py  schemas.py  services.py  utils.py
app/routers/: admin.py  admin_routes.py  api.py  auth.py  auth_routes.py  public.py  system.py
app/routers/admin_api/: __init__.py  reviews.py  stats.py  users.py
app/routers/auth_api/: __init__.py  profile.py  sessions.py
app/routers/integrations/: __init__.py  bot.py
app/routers/public_api/: __init__.py  characters.py  emojis.py  feature_tags.py  groups.py  images.py  rankings.py  uploads.py
app/security/: __init__.py  api_key.py  permissions.py  tickets.py
data/: picmanager.db  picmanager.db.snapshot
static/: index.html  login.html  profile.html
static/css/: icons.css  style.css
static/js/: api.js  auth.js  character-selector.js  emoji-library.js  main.js  pinyin-search.js  tag-selector.js  ui.js  upload.js
